feat: 完成 RAG 知识库闭环与部署调整